# devcompete

./: .deployment  .gitignore  README.md  ct.json  manage.py  package-lock.json  practice.json  pyproject.toml  requirements.txt  sample.env
.github/workflows/: prod_devcompete.yml
contest/: admin.py  consumers.py  models.py  views.py
contest/migrations/: 0001_initial.py  0002_contest_player1_contest_player2.py  0003_alter_contest_player1_alter_contest_player2.py  0004_rename_input_testcase_user_input_testcase_points.py  0005_alter_submission_user.py  0006_contest_ai_result_analysis.py  0007_contest_player1_submitted_contest_player2_submitted_and_more.py
devcompete/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
pratice/: admin.py  apps.py  models.py  views.py
pratice/migrations/: 0001_initial.py  0002_alter_question_question_text.py  0003_alter_question_test_cases.py  0004_question_question_name.py  0005_question_difficulty.py  0006_remove_question_test_cases_question_test_cases.py  0007_remove_question_test_cases.py  0008_question_test_cases.py  0009_remove_question_test_cases_testcase_question.py  0010_alter_question_question_text.py
static/css/: practice.css
templates/: AI_Chat.html  add-problems.html  base.html  contest.html  contests.html  create-contest.html  home.html  navbar.html  practice.html  result.html  result_wait.html
templates/account/: _button.html  _render_form.html  login.html
templates/practice/: create_question.html  practice.html  question.html
templates/socialaccount/: base.html
users/: models.py
(+1 files in other folders)
