[tool.poetry]
name = "devcompete"
version = "0.1.0"
description = ""
authors = ["Rachit Khurana <70265590+notnotrachit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-allauth = "^0.58.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
