[tool.poetry]
name = "devcompete"
version = "0.1.0"
description = ""
authors = ["Rachit Khurana <70265590+notnotrachit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
django-allauth = "^0.58.2"
django-allauth-ui = "^0.1.5"
django-widget-tweaks = "^1.5.0"
python-dotenv = "^1.0.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
whitenoise = "^6.6.0"
psycopg = {extras = ["binary"], version = "^3.1.13"}
mysqlclient = "^2.2.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
uvicorn = "^0.24.0.post1"
hypercorn = "^0.15.0"
google-generativeai = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
